--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
     <link rel="manifest" href="/site.webmanifest" />
+    <meta
+      property="og:image"
+      content="https://doge.t3.gg/assets/twitter-banner.png"
+    />
   </head>
   <body>
     <div id="root"></div>
