More header crap

--- a/index.html
+++ b/index.html
@@ -22,6 +22,10 @@
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
     <link rel="manifest" href="/site.webmanifest" />
     <meta
+      property="twitter:image"
+      content="https://doge.t3.gg/assets/twitter-banner.png"
+    />
+    <meta
       property="og:image"
       content="https://doge.t3.gg/assets/twitter-banner.png"
     />
