--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Dogecoin Simulator</title>
+    <title>Dogecoin Simulator Alpha (v0.2)</title>
     <meta property="og:title" content="Dogecoin Simulator" />
     <meta
       property="og:description"
