--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
           .join("")
       )();
     </script>
+    <script type="module" src="/js/odometer.js"></script>
   </head>
   <body>
     <div id="root"></div>
