Switch to default theme, fix presets

--- a/index.html
+++ b/index.html
@@ -47,6 +47,14 @@
           .join("")
       )();
     </script>
+    <script>
+      window.odometerOptions = {
+        duration: 100,
+        format: "(,ddd)",
+        animation: "count",
+        theme: "default",
+      };
+    </script>
     <script type="module" src="/js/odometer.js"></script>
   </head>
   <body>
