--- a/index.html
+++ b/index.html
@@ -47,15 +47,7 @@
           .join("")
       )();
     </script>
-    <script>
-      window.odometerOptions = {
-        duration: 100,
-        format: "(,ddd)",
-        animation: "count",
-        theme: "default",
-      };
-    </script>
-    <script type="module" src="/js/odometer.js"></script>
+    <script type="module" src="/js/countup.js"></script>
   </head>
   <body>
     <div id="root"></div>
