--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     </script>
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root">If you see this, refresh</div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
