--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     />
     <meta http-equiv="Pragma" content="no-cache" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Dogecoin Simulator Alpha (v0.5)</title>
+    <title>Dogecoin Simulator Beta (v1.0)</title>
     <meta property="og:title" content="Dogecoin Simulator" />
     <meta
       property="og:description"
