Add js warning to index file, add modal view on victory, balance walls a bit

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     </script>
   </head>
   <body>
-    <div id="root">If you see this, refresh</div>
+    <div id="root">If you see this, refresh (and make sure JS is enabled - this is a game after all 😄)</div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
